# VHoleMapper-VHM

./: CITATION.cff  LICENSE.txt  README.md  __init__.py  config.py  geometry.py  io_utils.py  main.py  mls.py  models.py  outputs.py  pipeline.py  plotting.py  pyproject.toml  search.py  sector.py
config/: __init__.py  settings.example.py  settings.py
data/ICF3/: ICF3.xyz  molecule_with_sigmaholes.xyz  sigma_hole_candidates.csv  sigma_holes_validated.txt  vtx.txt
data/IF/: IF.xyz  molecule_with_sigmaholes.xyz  sigma_hole_candidates.csv  sigma_holes_validated.txt  vtx.txt
data/SbF3/: SbF3.xyz  molecule_with_sigmaholes.xyz  sigma_hole_candidates.csv  sigma_holes_validated.txt  vtx.txt
data/TeF2/: TeF2.xyz  molecule_with_sigmaholes.xyz  sigma_hole_candidates.csv  sigma_holes_validated.txt  vtx.txt
data/benzene/: benzene.xyz  molecule_with_piholes.xyz  pi_hole_candidates.csv  pi_holes_validated.txt  vtx.txt
data/f6benzene/: f6benzene.xyz  molecule_with_piholes.xyz  pi_hole_candidates.csv  pi_holes_validated.txt  vtx.txt
src/vhm/: __init__.py  cli.py  config.py  geometry.py  io_utils.py  mls.py  outputs.py  pipeline.py  plotting.py  search.py  sector.py
tests/: test_config.py  test_imports.py  test_io_utils.py
