[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vholemapper"
version = "0.1.0"
description = "Pi-hole detection and analysis from molecular electrostatic potential surfaces."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
  { name = "Lucas Gian Fachini" }
]
keywords = [
  "chemistry",
  "electrostatic-potential",
  "pi-hole",
  "molecular-surface",
]
dependencies = [
  "numpy>=1.20",
  "scipy>=1.7",
  "matplotlib>=3.5",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
vhm = "vhm.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["vhm*"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
